--- a/Project (5)/index.html
+++ b/Project (5)/index.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <h1>Milind sangale</h1>
+    <h2>MIlind Sangale</h2>
+    <h1>Milind sangale</h1>
+    <h2>MIlind Sangale</h2>
+    <h1>Milind sangale</h1>
+    <h2>MIlind Sangale</h2>
+    <h1>Milind sangale</h1>
+    <h2>MIlind Sangale</h2>
+    <h1>Milind sangale</h1>
+    <h2>MIlind Sangale</h2>
     
 </body>
 </html>
